code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList
   10           | error COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag
   15                | STRUCT OptTag LC error DefList RC

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | error RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP
   24       | error RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec
   27        | error COMMA VarList

   28 ParamDec: Specifier VarDec

   29 CompSt: LC DefList StmtList RC
   30       | error RC

   31 StmtList: Stmt StmtList
   32         | %empty

   33 Stmt: Exp SEMI
   34     | CompSt
   35     | RETURN Exp SEMI
   36     | IF LP Exp RP Stmt ELSE Stmt
   37     | IF LP Exp RP Stmt
   38     | WHILE LP Exp RP Stmt
   39     | error SEMI

   40 DefList: Def DefList
   41        | %empty

   42 Def: Specifier DecList SEMI
   43    | Specifier DecList error SEMI

   44 DecList: Dec
   45        | Dec COMMA DecList

   46 Dec: VarDec
   47    | VarDec ASSIGNOP Exp

   48 Exp: Exp ASSIGNOP Exp
   49    | Exp AND Exp
   50    | Exp OR Exp
   51    | Exp RELOP Exp
   52    | Exp PLUS Exp
   53    | Exp MINUS Exp
   54    | Exp STAR Exp
   55    | Exp DIV Exp
   56    | LP Exp RP
   57    | MINUS Exp
   58    | NOT Exp
   59    | ID LP Args RP
   60    | ID LP RP
   61    | Exp LB Exp RB
   62    | Exp DOT ID
   63    | ID
   64    | INT
   65    | FLOAT
   66    | error RP
   67    | error RB

   68 Args: Exp COMMA Args
   69     | Exp
   70     | error COMMA Args


Terminals, with rules where they appear

$end (0) 0
error (256) 7 10 15 21 24 27 30 39 43 66 67 70
INT (258) 20 64
FLOAT (259) 65
SEMI (260) 4 5 7 33 35 39 42 43
COMMA (261) 9 10 25 27 45 68 70
ASSIGNOP (262) 47 48
RELOP (263) 51
PLUS (264) 52
MINUS (265) 53 57
STAR (266) 54
DIV (267) 55
AND (268) 49
OR (269) 50
DOT (270) 62
NOT (271) 58
TYPE (272) 11
LP (273) 22 23 36 37 38 56 59 60
RP (274) 22 23 24 36 37 38 56 59 60 66
LB (275) 20 61
RB (276) 20 21 61 67
LC (277) 13 15 29
RC (278) 13 15 29 30
STRUCT (279) 13 14 15
RETURN (280) 35
IF (281) 36 37
ELSE (282) 36
WHILE (283) 38
ID (284) 16 18 19 22 23 59 60 62 63
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7, on right: 2
ExtDecList (35)
    on left: 8 9 10, on right: 4 9 10
Specifier (36)
    on left: 11 12, on right: 4 5 6 28 42 43
StructSpecifier (37)
    on left: 13 14 15, on right: 12
OptTag (38)
    on left: 16 17, on right: 13 15
Tag (39)
    on left: 18, on right: 14
VarDec (40)
    on left: 19 20 21, on right: 8 9 20 28 46 47
FunDec (41)
    on left: 22 23 24, on right: 6
VarList (42)
    on left: 25 26 27, on right: 22 25 27
ParamDec (43)
    on left: 28, on right: 25 26
CompSt (44)
    on left: 29 30, on right: 6 34
StmtList (45)
    on left: 31 32, on right: 29 31
Stmt (46)
    on left: 33 34 35 36 37 38 39, on right: 31 36 37 38
DefList (47)
    on left: 40 41, on right: 13 15 29 40
Def (48)
    on left: 42 43, on right: 40
DecList (49)
    on left: 44 45, on right: 42 43 45
Dec (50)
    on left: 46 47, on right: 44 45
Exp (51)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67, on right: 33 35 36 37 38 47 48 49 50 51 52 53 54 55 56 57
    58 61 62 68 69
Args (52)
    on left: 68 69 70, on right: 59 68 70


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag
   15                | STRUCT . OptTag LC error DefList RC

    ID  shift, and go to state 10

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    error  shift, and go to state 15
    SEMI   shift, and go to state 16
    ID     shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 11

   13 StructSpecifier: STRUCT OptTag . LC DefList RC
   15                | STRUCT OptTag . LC error DefList RC

    LC  shift, and go to state 21


State 12

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

   10 ExtDecList: error . COMMA ExtDecList
   21 VarDec: error . RB
   24 FunDec: error . RP

    COMMA  shift, and go to state 22
    RP     shift, and go to state 23
    RB     shift, and go to state 24


State 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 17

   19 VarDec: ID .
   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP

    LP  shift, and go to state 25

    $default  reduce using rule 19 (VarDec)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 26


State 19

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 27
    LB     shift, and go to state 28

    $default  reduce using rule 8 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 29
    LC     shift, and go to state 30

    CompSt  go to state 31


State 21

   13 StructSpecifier: STRUCT OptTag LC . DefList RC
   15                | STRUCT OptTag LC . error DefList RC

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 41 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 34
    Def              go to state 35


State 22

   10 ExtDecList: error COMMA . ExtDecList

    error  shift, and go to state 36
    ID     shift, and go to state 37

    ExtDecList  go to state 38
    VarDec      go to state 19


State 23

   24 FunDec: error RP .

    $default  reduce using rule 24 (FunDec)


State 24

   21 VarDec: error RB .

    $default  reduce using rule 21 (VarDec)


State 25

   22 FunDec: ID LP . VarList RP
   23       | ID LP . RP

    error   shift, and go to state 39
    TYPE    shift, and go to state 2
    RP      shift, and go to state 40
    STRUCT  shift, and go to state 3

    Specifier        go to state 41
    StructSpecifier  go to state 8
    VarList          go to state 42
    ParamDec         go to state 43


State 26

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 27

    9 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 36
    ID     shift, and go to state 37

    ExtDecList  go to state 44
    VarDec      go to state 19


State 28

   20 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 45


State 29

   30 CompSt: error . RC

    RC  shift, and go to state 46


State 30

   29 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 41 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 47
    Def              go to state 35


State 31

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 32

   15 StructSpecifier: STRUCT OptTag LC error . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 41 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 48
    Def              go to state 35


State 33

   42 Def: Specifier . DecList SEMI
   43    | Specifier . DecList error SEMI

    error  shift, and go to state 49
    ID     shift, and go to state 37

    VarDec   go to state 50
    DecList  go to state 51
    Dec      go to state 52


State 34

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 53


State 35

   40 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 41 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 54
    Def              go to state 35


State 36

   10 ExtDecList: error . COMMA ExtDecList
   21 VarDec: error . RB

    COMMA  shift, and go to state 22
    RB     shift, and go to state 24


State 37

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 38

   10 ExtDecList: error COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 39

   27 VarList: error . COMMA VarList

    COMMA  shift, and go to state 55


State 40

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


State 41

   28 ParamDec: Specifier . VarDec

    error  shift, and go to state 49
    ID     shift, and go to state 37

    VarDec  go to state 56


State 42

   22 FunDec: ID LP VarList . RP

    RP  shift, and go to state 57


State 43

   25 VarList: ParamDec . COMMA VarList
   26        | ParamDec .

    COMMA  shift, and go to state 58

    $default  reduce using rule 26 (VarList)


State 44

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 45

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 59


State 46

   30 CompSt: error RC .

    $default  reduce using rule 30 (CompSt)


State 47

   29 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    MINUS   shift, and go to state 63
    NOT     shift, and go to state 64
    LP      shift, and go to state 65
    LC      shift, and go to state 30
    RETURN  shift, and go to state 66
    IF      shift, and go to state 67
    WHILE   shift, and go to state 68
    ID      shift, and go to state 69

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 70
    StmtList  go to state 71
    Stmt      go to state 72
    Exp       go to state 73


State 48

   15 StructSpecifier: STRUCT OptTag LC error DefList . RC

    RC  shift, and go to state 74


State 49

   21 VarDec: error . RB

    RB  shift, and go to state 24


State 50

   20 VarDec: VarDec . LB INT RB
   46 Dec: VarDec .
   47    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 75
    LB        shift, and go to state 28

    $default  reduce using rule 46 (Dec)


State 51

   42 Def: Specifier DecList . SEMI
   43    | Specifier DecList . error SEMI

    error  shift, and go to state 76
    SEMI   shift, and go to state 77


State 52

   44 DecList: Dec .
   45        | Dec . COMMA DecList

    COMMA  shift, and go to state 78

    $default  reduce using rule 44 (DecList)


State 53

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 54

   40 DefList: Def DefList .

    $default  reduce using rule 40 (DefList)


State 55

   27 VarList: error COMMA . VarList

    error   shift, and go to state 39
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 41
    StructSpecifier  go to state 8
    VarList          go to state 79
    ParamDec         go to state 43


State 56

   20 VarDec: VarDec . LB INT RB
   28 ParamDec: Specifier VarDec .

    LB  shift, and go to state 28

    $default  reduce using rule 28 (ParamDec)


State 57

   22 FunDec: ID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


State 58

   25 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 39
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 41
    StructSpecifier  go to state 8
    VarList          go to state 80
    ParamDec         go to state 43


State 59

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 60

   30 CompSt: error . RC
   39 Stmt: error . SEMI
   66 Exp: error . RP
   67    | error . RB

    SEMI  shift, and go to state 81
    RP    shift, and go to state 82
    RB    shift, and go to state 83
    RC    shift, and go to state 46


State 61

   64 Exp: INT .

    $default  reduce using rule 64 (Exp)


State 62

   65 Exp: FLOAT .

    $default  reduce using rule 65 (Exp)


State 63

   57 Exp: MINUS . Exp

    error  shift, and go to state 84
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    ID     shift, and go to state 69

    Exp  go to state 85


State 64

   58 Exp: NOT . Exp

    error  shift, and go to state 84
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    ID     shift, and go to state 69

    Exp  go to state 86


State 65

   56 Exp: LP . Exp RP

    error  shift, and go to state 84
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    ID     shift, and go to state 69

    Exp  go to state 87


State 66

   35 Stmt: RETURN . Exp SEMI

    error  shift, and go to state 84
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    ID     shift, and go to state 69

    Exp  go to state 88


State 67

   36 Stmt: IF . LP Exp RP Stmt ELSE Stmt
   37     | IF . LP Exp RP Stmt

    LP  shift, and go to state 89


State 68

   38 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 90


State 69

   59 Exp: ID . LP Args RP
   60    | ID . LP RP
   63    | ID .

    LP  shift, and go to state 91

    $default  reduce using rule 63 (Exp)


State 70

   34 Stmt: CompSt .

    $default  reduce using rule 34 (Stmt)


State 71

   29 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 92


State 72

   31 StmtList: Stmt . StmtList

    error   shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    MINUS   shift, and go to state 63
    NOT     shift, and go to state 64
    LP      shift, and go to state 65
    LC      shift, and go to state 30
    RETURN  shift, and go to state 66
    IF      shift, and go to state 67
    WHILE   shift, and go to state 68
    ID      shift, and go to state 69

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 70
    StmtList  go to state 93
    Stmt      go to state 72
    Exp       go to state 73


State 73

   33 Stmt: Exp . SEMI
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    SEMI      shift, and go to state 94
    ASSIGNOP  shift, and go to state 95
    RELOP     shift, and go to state 96
    PLUS      shift, and go to state 97
    MINUS     shift, and go to state 98
    STAR      shift, and go to state 99
    DIV       shift, and go to state 100
    AND       shift, and go to state 101
    OR        shift, and go to state 102
    DOT       shift, and go to state 103
    LB        shift, and go to state 104


State 74

   15 StructSpecifier: STRUCT OptTag LC error DefList RC .

    $default  reduce using rule 15 (StructSpecifier)


State 75

   47 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 84
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    ID     shift, and go to state 69

    Exp  go to state 105


State 76

   43 Def: Specifier DecList error . SEMI

    SEMI  shift, and go to state 106


State 77

   42 Def: Specifier DecList SEMI .

    $default  reduce using rule 42 (Def)


State 78

   45 DecList: Dec COMMA . DecList

    error  shift, and go to state 49
    ID     shift, and go to state 37

    VarDec   go to state 50
    DecList  go to state 107
    Dec      go to state 52


State 79

   27 VarList: error COMMA VarList .

    $default  reduce using rule 27 (VarList)


State 80

   25 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 25 (VarList)


State 81

   39 Stmt: error SEMI .

    $default  reduce using rule 39 (Stmt)


State 82

   66 Exp: error RP .

    $default  reduce using rule 66 (Exp)


State 83

   67 Exp: error RB .

    $default  reduce using rule 67 (Exp)


State 84

   66 Exp: error . RP
   67    | error . RB

    RP  shift, and go to state 82
    RB  shift, and go to state 83


State 85

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   57    | MINUS Exp .
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    STAR  shift, and go to state 99
    DIV   shift, and go to state 100
    DOT   shift, and go to state 103
    LB    shift, and go to state 104

    $default  reduce using rule 57 (Exp)


State 86

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   58    | NOT Exp .
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    DOT  shift, and go to state 103
    LB   shift, and go to state 104

    $default  reduce using rule 58 (Exp)


State 87

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   56    | LP Exp . RP
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 95
    RELOP     shift, and go to state 96
    PLUS      shift, and go to state 97
    MINUS     shift, and go to state 98
    STAR      shift, and go to state 99
    DIV       shift, and go to state 100
    AND       shift, and go to state 101
    OR        shift, and go to state 102
    DOT       shift, and go to state 103
    RP        shift, and go to state 108
    LB        shift, and go to state 104


State 88

   35 Stmt: RETURN Exp . SEMI
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    SEMI      shift, and go to state 109
    ASSIGNOP  shift, and go to state 95
    RELOP     shift, and go to state 96
    PLUS      shift, and go to state 97
    MINUS     shift, and go to state 98
    STAR      shift, and go to state 99
    DIV       shift, and go to state 100
    AND       shift, and go to state 101
    OR        shift, and go to state 102
    DOT       shift, and go to state 103
    LB        shift, and go to state 104


State 89

   36 Stmt: IF LP . Exp RP Stmt ELSE Stmt
   37     | IF LP . Exp RP Stmt

    error  shift, and go to state 84
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    ID     shift, and go to state 69

    Exp  go to state 110


State 90

   38 Stmt: WHILE LP . Exp RP Stmt

    error  shift, and go to state 84
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    ID     shift, and go to state 69

    Exp  go to state 111


State 91

   59 Exp: ID LP . Args RP
   60    | ID LP . RP

    error  shift, and go to state 112
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    RP     shift, and go to state 113
    ID     shift, and go to state 69

    Exp   go to state 114
    Args  go to state 115


State 92

   29 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 29 (CompSt)


State 93

   31 StmtList: Stmt StmtList .

    $default  reduce using rule 31 (StmtList)


State 94

   33 Stmt: Exp SEMI .

    $default  reduce using rule 33 (Stmt)


State 95

   48 Exp: Exp ASSIGNOP . Exp

    error  shift, and go to state 84
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    ID     shift, and go to state 69

    Exp  go to state 116


State 96

   51 Exp: Exp RELOP . Exp

    error  shift, and go to state 84
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    ID     shift, and go to state 69

    Exp  go to state 117


State 97

   52 Exp: Exp PLUS . Exp

    error  shift, and go to state 84
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    ID     shift, and go to state 69

    Exp  go to state 118


State 98

   53 Exp: Exp MINUS . Exp

    error  shift, and go to state 84
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    MINUS  shift, and go to state 63
    NOT    shift, and go to state 64
    LP     shift, and go to state 65
    ID     shift, and go to state 69

    Exp  go to state 119


State 99

   54 Exp: Exp STAR . Exp
